--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://cryptoalarmdylsub.github.io/crypto-alarm"
+  "homepage": "https://cryptoalarmdylsub.github.io/crypto-alarm",
   "name": "crypto-tracker",
   "version": "0.1.0",
   "private": true,
@@ -12,6 +12,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
